feat: add some trace parameters